--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "http-server": "^0.11.1"
   },
   "scripts": {
-    "start": "http-server ."
+    "start": "http-server . & open http://127.0.0.1:8080"
   },
   "repository": {
     "type": "git",
